# tiralabra

./: .gitignore  README.md  bitreader.py  bitstream.py  decompressor.py  file_reader.py  pyproject.toml
.github/workflows/: main.yml
documentation/: implementation.md  project_definition.md  test_document.md  useage_instructions.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md
src/: bitreader.py  decompressor.py  file_reader.py  huffman.py  main.py  utils.py
src/tests/: test_decompressor.py  test_file_reader.py  uncompressed.txt
tests/: test_bitstream.py  test_decompressor.py  test_file_reader.py
