[tool.poetry]
name = "deflate"
version = "0.1.0"
description = ""
authors = ["Laiho <emillaiho@hotmail.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
bitarray = "^2.7.2"
pytest = "^7.2.1"
coverage = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
